# infinite-canvas

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.local.yml  docker-compose.yml  nginx.conf
.github/workflows/: desktop-builds.yml  docker-image.yml  docs-docker-image.yml  github-pages.yml  publish-canvas-agent.yml  release.yml  tauri-builds.yml
canvas-agent/src/: canvas-session.test.ts  canvas-session.ts  config.ts  http-server.ts  schemas.ts
desktop/: README.md  package-lock.json  package.json
desktop/src/: main.js
docs/content/docs/overview/: docker.mdx
docs/superpowers/plans/: 2026-07-10-remove-electron-prompt-cover.md  2026-07-11-tauri-native-download.md
docs/superpowers/specs/: 2026-07-10-remove-electron-prompt-cover-design.md  2026-07-11-tauri-native-download-design.md
src-tauri/: Cargo.toml  README.md  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/backend/: download.rs  http.rs  media.rs  mod.rs
web/: package.json
web/src/hooks/: use-file-download.ts
web/src/lib/: image-generation-log.ts
web/src/lib/canvas/: canvas-export.ts
web/src/services/: file-download.ts  file-storage.ts  image-storage.ts  tauri-backend.ts  tauri-media-storage.ts  webdav-sync.ts
web/src/stores/: use-config-store.ts
web/tests/: config-readiness.test.ts  css-import-order.test.ts  file-download.test.ts  image-generation-log.test.ts  prompt-cover-usage.test.ts  prompt-cover.test.tsx  tauri-backend.test.ts  tauri-http-client.test.ts  tauri-media-storage.test.ts
(+22 files in other folders)
