[package]
name = "infinite-canvas-tauri"
version = "0.6.0"
description = "Infinite Canvas Tauri desktop application."
authors = ["Infinite Canvas Contributors"]
edition = "2021"
license = "AGPL-3.0-only"

[lib]
name = "infinite_canvas_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "infinite-canvas"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
tauri = { version = "2.11.5", features = [] }
tauri-plugin-opener = "2.5.4"
